# python-valueserp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  exceptions.rst  index.rst  requirements.txt
docs/client/: credentials.rst  googleclient.rst
docs/serps/: features.rst  serpinfo.rst  webserp.rst
src/valueserp/: __init__.py  aclient.py  client.py  const.py  credentials.py  exceptions.py  models.py  searchtype.py  serp.py  utils.py
src/valueserp/serp/: __init__.py  info.py
tests/: test_async_client.py  test_client.py  test_credentials.py  test_utils.py
valueserp/: __init__.py  client.py  const.py  credentials.py  exceptions.py
valueserp/serp/: __init__.py  base.py  info.py  models.py  web.py
