[project]
name = "valueserp"
requires-python = ">= 3.9, < 4"

[tool.poetry]
name = "valueserp"
version = "0.3.0"
description = "Client library for VALUE SERP: https://www.valueserp.com/"
authors = ["Joe Joiner <2454320+joejoinerr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
loguru = "^0.7.2"
httpx = {extras = ["http2"], version = "^0.27.0"}
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.1"
respx = "^0.21.1"
pre-commit = "^3.7.1"
ruff = "^0.4.10"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "B", "N", "D", "ANN", "TRY", "PD", "RUF200", "UP"]
ignore = ["E501", "B904", "ANN101", "ANN003"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"docs/conf.py" = ["D100"]
"tests/**/*.py" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"
