[project]
name = "valueserp"
version = "0.5.0"
description = "Client library for VALUE SERP: https://www.valueserp.com/"
authors = [{ name = "Joe Joiner", email = "2454320+joejoinerr@users.noreply.github.com" }]
requires-python = ">= 3.9, < 4"
dependencies = [
    "loguru>=0.7.2,<0.8",
    "httpx[http2]>=0.28.1,<0.29",
    "typing-extensions>=4.12.2,<5",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23.7,<0.24",
    "pytest>=8.2.1,<9",
    "respx>=0.21.1,<0.22",
    "pre-commit>=3.7.1,<4",
    "ruff>=0.4.10,<0.5",
    "Sphinx>=5.0.2,<6",
    "sphinx-rtd-theme>=1.0.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "B", "N", "D", "ANN", "TRY", "PD", "RUF200", "UP"]
ignore = ["E501", "B904", "ANN101", "ANN003"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"docs/conf.py" = ["D100"]
"tests/**/*.py" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"
